--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </a> </h2>
     <br /><br />
     <body text="#00ff48">
-    <h2>Kanał YT GXVERT/GXSPACE: <a href="https://www.youtube.com/channel/UCx9n7b3msYdTBWSogit0qcA" target="_blank" title="Otwiera YT" >Kliknij Aby otworzyć YT </a</h2>      
+    <h2>Kanał YT GXVERT/GXSPACE: <a href="https://www.youtube.com/channel/UCx9n7b3msYdTBWSogit0qcA" target="_blank" title="Otwiera YT" color: magneta >Kliknij Aby otworzyć YT </a</h2>      
         <img src="imgs/thunder_qs2dvf2l.gif">  
         
 </body>
