--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="text1">Welcome in</div>
     <div class="text2">c01n</div>
 </div>
-<body>
+<body style="text-align: center;">
     <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
 
 </body>
