--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="text2">c01n</div>
 </div>
 <body style="text-align: center;">
-    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
+    <h1> <a href="The best minecraft bots attacks" >The best minecraft bots attack</a> </h1>
 
 </body>
 </html>
