--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
-<div class="container">
-    <div class="text1">Welcome in</div>
-    <div class="text2">c01n</div>
-</div>
 <body style="text-align: center;">
-    <h1> <a href="The best minecraft bots attacks" >The best minecraft bots attack</a> </h1>
+    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
+
+<div class="container">
+    <div class="text1">Welcome to</div>
+    <div class="text2">GxSpace</div>
+</div>
 
 </body>
 </html>
