--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body style="text-align: center;">
     <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
+    <br /><br /><br /><br /><br />
+    <h3>Info: serwer discord do rajdowania serwerow mc</h3>
 
 <div class="container">
     <div class="text1">Welcome to</div>
