--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
 <body style="text-align: center;">
-    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
+    <h1> <a href="https://discord.gg/QpFgAueFvb" >The best minecraft bots attack</a> </h1>
     <br /><br /><br /><br /><br />
     <h3>Info: serwer discord do rajdowania serwerow mc</h3>
 
