--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
 <body style="text-align: center;" background="imgs/tlofioletrozowy.png" >
-    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
-    <br /><br />
-    <h3>Info: serwer discord do rajdowania serwerow mc</h3>
+    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>s
 
 <div class="container">
     <div class="text1">Welcome to</div>
