--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
 <body style="text-align: center;" background="imgs/tlofioletrozowy.png" >
-    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>s
+    <h1> <a href="The best minecraft bots attack" >THE BEST MINECRAFT BOTS ATTACKS</a> </h1>
 
 <div class="container">
     <div class="text1">Welcome to</div>
