--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
-<body style="text-align: center;">
+<body style="text-align: center;" bgcolor="black" >
     <h1> <a href="The best minecraft bots attack" >THE BEST MINECRAFT BOTS ATTACKS</a> </h1>
 
 <div class="container">
