--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
-<body bgcolor="black" style="text-align: center;">
-    <h1> <a href="The best minecraft bots attack" >THE BEST MINECRAFT BOTS ATTACKS</a> </h1>
+<style>
+    body {
+        background: black;
+    }
+</style>
+<body style="text-align: center;" background="imgs/tlofioletrozowy.png" >
+    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
+    <br /><br />
+    <h3>Info: serwer discord do rajdowania serwerow mc</h3>
 
 <div class="container">
     <div class="text1">Welcome to</div>
