--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     }
 </style>
 <body style="text-align: center;" background="imgs/tlofioletrozowy.png" >
-    <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
+    <h1> <a href="https://discord.gg/YQybsSh4>The best minecraft bots attack</a> </h1>
     <br /><br />
-    <h3>Info: serwer discord do rajdowania serwerow mc</h3>
 
 <div class="container">
     <div class="text1">Welcome to</div>
