--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     }
 </style>
 <body style="text-align: center;" background="imgs/tlofioletrozowy.png" >
-    <h1> <a href="https://discord.gg/YQybsSh4>The best minecraft bots attack</a> </h1>
+     <br /><br /> <br /><br /> <br /><br />
+    <h1> <a href="https://discord.gg/YQybsSh4>[ Join to discord server ]</a> </h1>
     <br /><br />
 
 <div class="container">
