--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         background: black;
     }
 </style>
-<body style="text-align: center;" background="imgs/tlofioletrozowy.png" >
-     <br />
+<body style="text-align: center;">
     <h1> <a href="https://discord.gg/YQybsSh4>[ Join to discord server ]</a> </h1>
     <br /><br />
 
