--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css?family=Lato:700,900&display=swap" rel="stylesheet">
 </head>
-<style>
-    body {
-        background: black;
-    }
-</style>
-<body style="text-align: center;">
-    <h1> <a href="https://discord.gg/YQybsSh4 >[ Join to discord server ]</a> </h1>
-    <br /><br />
-
+<body>
 <div class="container">
-    <div class="text1">Welcome to</div>
-    <div class="text2">GxSpace</div>
+    <div class="text1">Welcome in</div>
+    <div class="text2">c01n</div>
 </div>
 
 </body>
