--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         background: black;
     }
 </style>
-<body>
+<body style="text-align: center;">
     <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
 <div class="container">
     <div class="text1">Welcome to</div>
