--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
 <div class="container">
     <div class="text1">Welcome to</div>
-    <div class="text2">GxSpace/div>
+    <div class="text2">GxSpace</div>
 
 </body>
 </html>
