--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="text-align: center;">
     <h1> <a href="The best minecraft bots attack" >The best minecraft bots attack</a> </h1>
 <div class="container">
-    <div class="text1">Welcome to</div>
+    <div class="text1">=Witaj w</div>
     <div class="text2">GxSpace</div>
 
 </body>
