--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     }
 </style>
 <body style="text-align: center;">
-    <h1> <a href="https://discord.gg/YQybsSh4" >The best minecraft bots attack</a> </h1>
+    <br /><br />
+    <h1> <a href="https://discord.gg/YQybsSh4" >[ Join to discord server ]</a> </h1>
 <div class="container">
     <div class="text1">Witaj w</div>
     <div class="text2">GxSpace</div>
