--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <div class="container">
     <div class="text1">Witaj w</div>
     <div class="text2">GxSpace</div>
+    
+    <h2> <a href="https://gxspaceinfo.tk" >[ INFO ]</a> </h1>
 
 </body>
 </html>
