--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1> <a href="https://discord.gg/YQybsSh4" >[ Join to discord server ]</a> </h1>
 <div class="container">
     <div class="text1">Witaj w</div>
-    <div class="text2">GxSpace</div>
+    <div class="text2">GxVAPE</div>
     
     <h2> <a href="https://gxspaceinfo.tk" >[ INFO ]</a> </h1>
 
