--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="text1">Witaj w</div>
     <div class="text2">GxVAPE</div>
     
-    <h2> <a href="https://gxspaceinfo.tk" >[ INFO ]</a> </h1>
+    <h2> <a href="https://gxvapeinfo.tk" >[ INFO ]</a> </h1>
 
 </body>
 </html>
